--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Unit 2 Starter Code, Option 3</title>
+  <title>Andreas_Unit 2 Project</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -11,7 +11,9 @@
     <h1>Title of Webpage</h1>
   </header>
   <div class="section">
-    <h1>Section 1</h1>
+    <a href=secondpage.html>
+      <h1>Section 1</h1>
+    </a>
     <!-- Add text, images, and links for section 1 below. -->
 
   </div>
