new shit ig idk

--- a/homelessness_factsheet.html
+++ b/homelessness_factsheet.html
@@ -4,12 +4,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Andreas_Unit 2 Project</title>
-        <link href="style_2.css" rel="stylesheet" type="text/css"/>
+        <link href="style_HR.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a href="index.html">
-            <button class="back_button">⬅️ Back</butto>
-        </a>
-
+        <div class="navbar">
+            <header>
+                <div>
+                    <a href="index.html">
+                        <button class="back_button">⬅️ Back</butto>
+                    </a>
+                </div>
+                <div class="navbartitle">
+                    <img src="afd4949347cbc2ecbb1d4ab07152eccb.png" class="house">
+                    <h1 class="navbartitletxt">Homelessness Factsheet</h1>
+                </div>
+        <img src="pngimg.com.png">
     </body>
 </html>
