--- a/homelessness_resources.html
+++ b/homelessness_resources.html
@@ -4,14 +4,34 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Andreas_Unit 2 Project</title>
-        <link href="style_2.css" rel="stylesheet" type="text/css"/>
+        <link href="style_HR.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>
-            <a href="index.html">
-                <button class="back_button">⬅️ Back</butto>
+        <div class="navbar">
+            <header>
+                <div>
+                    <a href="index.html">
+                        <button class="back_button">⬅️ Back</butto>
+                    </a>
+                </div>
+                <div class="navbartitle">
+                    <img src="afd4949347cbc2ecbb1d4ab07152eccb.png" class="house">
+                    <h1 class="navbartitletxt">Homelessness Resources</h1>
+              </div>
+            </header>
+          </div>
+
+        <div class="buttongrid">
+            <a href="https://headinghomeguide.org/" target="_blank">
+                <button class="button1">
+                    <p class="buttontxt">Housing Resources Guide for South Central Indiana</p>
+                </button>
+            </a>
+            <a href="https://houchin.house.gov/contact" target="_blank">
+                <button class="button2">
+                    <p class="buttontxt">Write to the Bloomington Repersentative</p>
+                </button>
             </a>
         </div>
-        <img src="https://image.similarpng.com/very-thumbnail/2020/09/Hand-drawing-yellow-sun-clipart-PNG.png" class="sun">
     </body>
 </html>
