--- a/index.html
+++ b/index.html
@@ -14,21 +14,28 @@
     </div>
     
     <div class="buttongrid">
-      <a href="homelessness_resources.html">
-        <button>Homelessness Resources</button>
-      </a>
-      <a href="bloomington_resource_map.html">
-        <button>Bloomington Resource Map</button>
-      </a>
-      <a href="homelessness_factsheet.html">
-        <button>Homelessness Factsheet</button>
-      </a>
+        <a href="homelessness_resources.html">
+          <button class="button1">Homelessness Resources</button>
+        </a>
+        <a href="https://bloomington.in.gov/sites/default/files/2023-01/Downtown%20Resources%20Map%20%26%20Guide%2011.3.2022_No%20Bleed.pdf" target="_blank">
+          <button class="map">
+            <div>
+              <p class="resourcestxt">Bloomington Resource</p>
+              <p class="maptxt">Map</p>
+            </div> 
+          </button>
+        </a>
+        <a href="homelessness_factsheet.html">
+          <button class="button2">Homelessness Factsheet</button>
+        </a>
+      </div>
+      
     </div>
 
   </body>
   <head>
     <title>Andreas_Unit 2 Project</title>
-    <link href="style_1.css" rel="stylesheet" type="text/css" />
+    <link href="style_index.css" rel="stylesheet" type="text/css" />
   </head>
   
 </html>
